Refactoring the project

--- a/Student exam/Pages/ExamSubmitted.cshtml
+++ b/Student exam/Pages/ExamSubmitted.cshtml
@@ -10,4 +10,4 @@
     <p>با تشکر از شما برای تکمیل آزمون. پاسخ های شما ثبت شده است.</p>
 </div>
 
-<a href="/Home/Index" class="btn btn-primary">Back to Home</a>
+<a href="/Index" class="btn btn-primary">Back to Home</a>
